@@ -12,6 +12,8 @@
   - package become private by default except for anon sub
   - package variable become private by default
   - field become private by default
+  - constant sub is inlined
+  - simple constructor is inlined
 0.0394 2018-11-24
   - reduce malloc count when object is created.
   - reduce object fields memory size.
